[package]
edition = "2021"
name = "rust-sponge"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create git tag
version       = "0.0.1"
license       = "MIT"
authors       = [
  "aristotle0x01@protonmail.com",
]
description   = "rust version of cs144 labs"
homepage      = "https://github.com/aristotle0x01/rust_sponge"
repository    = "https://github.com/aristotle0x01/rust_sponge.git"
readme        = "README.md"
keywords      = ["rust", "tcp", "socket"]
categories    = ["tcp"]
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/*.rs",
  "src/*/*.rs",
  "apps/*.rs",
  "tests/*.rs",
]

# For documentation of features see the `mio::features` module.
[features]
# By default Mio only provides a shell implementation.
default = []

[dependencies]
log = "0.4.8"
libc = "0.2.138"
nix = "0.26.1"
rand = "0.8"

[dev-dependencies]
env_logger = { version = "0.8.4", default-features = false }
rand = "0.8"

# https://subscription.packtpub.com/book/programming/9781800560963/2/ch02lvl1sec06/automating-build-management-with-cargo
# cargo run –-bin tcp_native "-l" "127.0.0.1" "1234"
[[bin]]
name = "tcp_native"
path = "apps/tcp_native.rs"
[[bin]]
name = "tcp_ipv4"
path = "apps/tcp_ipv4.rs"
[[bin]]
name = "tcp_udp"
path = "apps/tcp_udp.rs"
[[bin]]
name = "tun"
path = "apps/tun.rs"
[[bin]]
name = "webget"
path = "apps/webget.rs"
[[bin]]
name = "tcp_benchmark"
path = "apps/tcp_benchmark.rs"

[[example]]
name = "bidirectional_stream_copy"
path = "apps/bidirectional_stream_copy.rs"